# opencv_util

./: CMakeLists.txt  RANSAC.h  README.md  cv_draw.cpp  cv_draw.hpp  cvxCalib3d.cpp  cvxCalib3d.hpp  cvxEntropy.cpp  cvxEntropy.hpp  cvxIO.cpp  cvxIO.hpp  cvxImage_300.cpp  cvxImage_300.h  cvxImage_310.cpp  cvxImage_310.hpp  cvxImgMatch.cpp  cvxImgMatch.h  cvxImgProc.cpp  cvxImgProc.hpp  cvxMeanShift.cpp  cvxMeanShift.h  cvxNormals.cpp  cvxNormals.h  cvxPoseEstimation.cpp  cvxPoseEstimation.hpp  cvxUtil.cpp  cvxUtil.hpp  cvxWalshHadamard.cpp  cvxWalshHadamard.h  cvx_calib2d.cpp  cvx_calib2d.h  cvx_draw.cpp  cvx_draw.hpp  cvx_imgproc.cpp  cvx_imgproc.hpp  cvx_io.cpp  cvx_io.hpp  cvx_kvld.cpp  cvx_kvld.hpp  cvx_mean_shift.cpp  (+13 more)
Eigen/: eigen_geometry_util.cpp  eigen_geometry_util.h  eigen_matlab_writer.cpp  eigen_matlab_writer.h  eigen_sg_smooth.h  vnl_matlab_write.h
Kabsch/: Kabsch.cpp  Kabsch.h
SIFT/: eigenVLFeatSIFT.cpp  eigenVLFeatSIFT.h  sift_64.c  sift_64.h
asift/: cvx_asift_warp.cpp  cvx_asift_warp.hpp  vxl_asift_warp.cpp  vxl_asift_warp.hpp
camera_pose_estimation/: cvx_line_pose_estimation.cpp  cvx_line_pose_estimation.h  cvx_pl_pose_estimation.h  cvx_pose_estimation.cpp  cvx_pose_estimation_uncertainty.cpp  cvx_pose_estimation_uncertainty.h  cvx_pose_util.cpp  cvx_pose_util.h  ptz_pose_estimation.cpp  ptz_pose_estimation.h
cvx_gl/: cvx_gl_homography.cpp  cvx_gl_homography.h  cvx_gl_rotation_3d.h
cvx_pgl/: cvx_pgl_calibration_matrix.cpp  cvx_pgl_calibration_matrix.h  cvx_pgl_perspective_camera.cpp  cvx_pgl_perspective_camera.h  pgl_calibration_matrix.cpp  pgl_calibration_matrix.h  pgl_perspective_camera.cpp  pgl_perspective_camera.h  pgl_proj_camera.cpp  pgl_proj_camera.h  pgl_ptz_boundle_adjustment.cpp  pgl_ptz_boundle_adjustment.h  pgl_ptz_bundle_adjustment.cpp  pgl_ptz_camera.cpp  pgl_ptz_camera.h
flann_util/: eigen_flann.cpp  eigen_flann.h  flann_autotuned.h  flann_dual_kdtree.h  flann_kmeans.h  flann_linear.h  flann_pca_kd_tree.h  flann_single_kd_tree.h
line/: cvx_line.cpp  cvx_line.h  lsd_line_segment.cpp  lsd_line_segment.h
numerical_opt/: UT_ceres.cpp  UT_ceres.h
python/: extractVideoFrames.py  gui_select_point.py  plt_util.py  record_video.py
python_package/: CMakeLists.txt  cvx_opt.py  cvx_opt_python.cpp  cvx_opt_python.h  cvx_wht.py  cvx_wht_python.cpp  cvx_wht_python.h  ut_opt_ptz.py
src/: cv_head_310.hpp  cvx_draw.hpp  cvx_walsh_hadamard.cpp  cvx_walsh_hadamard.h
src/Eigen/: cvx_tensor.cpp  cvx_tensor.h  eigen_least_square.cpp  eigen_least_square.h  eigen_matlab_writer.cpp  eigen_sg_smooth.cpp  eigen_util.cpp  eigen_util.h  vnl_matlab_header.h  vnl_matlab_write.cpp  vxl_config.h
src/calib3d/: CMakeLists.txt  calib_tutorial.cpp
src/core/: cvx_imgproc.hpp  imgproc.cpp  imgproc.hpp
src/cvx_gl/: gl_homg_point_2d.h  gl_homg_point_3d.h  gl_ray_3d.h  gl_rotation_3d.h  gl_tolerance.h
src/cvx_opt/: opt_broadcast_camera.cpp  opt_broadcast_camera.h  opt_homography.cpp  opt_homography.h  opt_perspective_camera.cpp  opt_perspective_camera.h  opt_ptz_camera.cpp  opt_ptz_camera.h
src/cvx_pgl/: cvx_pgl_perspective_camera.cpp  cvx_pgl_perspective_camera.h  pgl_broadcast_camera.cpp  pgl_broadcast_camera.h  pgl_calibration_matrix.cpp  pgl_calibration_matrix.h  pgl_perspective_camera.cpp  pgl_perspective_camera.h  pgl_proj_camera.cpp  pgl_proj_camera.h  pgl_ptz_bundle_adjustment.cpp  pgl_ptz_bundle_adjustment.h  pgl_ptz_camera.cpp  pgl_ptz_camera.h  pgl_types.h  ptz_camera_util.cpp  ptz_camera_util.h
src/line/: cvx_line.h  lsd_line_segment.cpp  lsd_line_segment.h
src/tracking/: cvx_model_tracking2d.cpp  model_tracking2d.cpp  model_tracking2d.h
tracking/: cvx_model_tracking2d.cpp
vxl_core/: vcl_head_files.h  vgl_algo.cpp  vgl_algo.h  vgl_head_files.h  vnl_algo.cpp  vnl_algo.h  vnl_algo_homography.cpp  vnl_algo_homography.h  vnl_head_files.h  vpgl_algo.cpp  vpgl_algo.h  vpgl_head_files.h
xcode/EdgeSearch/EdgeSearch/: EdgeSearch.1  main.cpp
xcode/EdgeSearch/EdgeSearch.xcodeproj/: project.pbxproj
xcode/EdgeSearch/EdgeSearch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/EdgeSearch/EdgeSearch.xcodeproj/project.xcworkspace/xcuserdata/jimmy.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/EdgeSearch/EdgeSearch.xcodeproj/xcuserdata/jimmy.xcuserdatad/xcschemes/: EdgeSearch.xcscheme  xcschememanagement.plist
